# metal

./: .clangd  .clangd.template  .gitignore  .gitmodules  CMakeLists.txt  README.md  REQUIREMENTS.md  compile_flags.txt  nuttx.elf  pyrightconfig.json  wamrc-su-Rsb1G3.su
.west/: config
backup/1st_try/runtime/linux/bench/: CMakeLists.txt
backup/2nd_try/host/linux/: CMakeLists.txt  main.c
backup/2nd_try/host/linux/pymergetic/metal/port/: plat.c
backup/2nd_try/host/linux/pymergetic/metal/sys/: hostinfo.c  sys.c
backup/2nd_try/host/zephyr/: CMakeLists.txt  Kconfig  prj.conf
backup/2nd_try/host/zephyr/boards/: pm_ramdisk.overlay  qemu_x86_64.conf  verify_mod.conf
backup/2nd_try/host/zephyr/pymergetic/metal/orchestrator/: wasm_host.c
backup/2nd_try/host/zephyr/pymergetic/metal/port/: plat.c
backup/2nd_try/host/zephyr/pymergetic/metal/sys/: hostinfo.c  sys.c
backup/2nd_try/host/zephyr/pymergetic/wasi/: zephyr_file.c  zephyr_shim.h  zephyr_wasi_platform.h  zephyr_wasi_support.c
backup/2nd_try/host/zephyr/src/: main.c  verify_mod_smoke.c  verify_mod_smoke.h
docs/: CONSOLE.md  COOP_MEMORY.md  DOOM_ASYNC.md  EFI.md  FAST_JIT.md  IO.md  LAYERS.md  LIBC_ASYNC.md  MEMORY.md  MEMORY_BASELINE.md  MEMORY_MODEL.md  MOUNT.md  NAMING.md  PLATFORM.md  RUNTIME.md  SOURCETREE.md  TODO.md  TRUST.md  WASI.md
host/linux/: CMakeLists.txt  main.c
host/linux/pymergetic/metal/port/: plat.c
runtime/: CMakeLists.txt  Kconfig  prj.conf
runtime/boards/: native_sim_native_64.conf  native_sim_native_64.overlay  pm_machine_ram.dtsi  qemu_x86_64.conf
runtime/linux/bench/: main.c
runtime/src/: main.c
runtime/zephyr/: CMakeLists.txt
runtime/zephyr/boards/: qemu_x86_64_efi.conf
screenshots/: README.md
scripts/: build  build-engines.sh  build-linux.sh  build-mod.sh  build-nuttx-sim.sh  build-orchestrator.sh  build-zephyr-native-sim.sh  build-zephyr-qemu.sh  env.sh  gen-zephyr-mods-embed.sh  pack-image.sh  pki  requirements.txt  run  run-linux-bench.sh  setup  setup-curl.sh  setup-ide.sh  (+31 more)
src/efi/: CMakeLists.txt  README.md  lwip  main.c  wamr
src/efi/MetalPkg/: Metal.inf  MetalPkg.dec  MetalPkg.dsc  main.c  shell_cmds.lds  smoke.c  smoke.h
src/efi/MetalPkg/cpu/: metal_coro.c  metal_coro.h  metal_run.c  metal_run.h  metal_stack.c  metal_stack.h
src/efi/MetalPkg/mem/: metal_arena.c  metal_arena.h  metal_libc.c  metal_mem.c  metal_mem.h  tlsf_edk2.c  tlsf_shim.h
src/efi/pymergetic/metal/arena/: arena.c
src/efi/pymergetic/metal/async/: async.c
src/efi/pymergetic/metal/audio/: audio.c  audio_null.c  virtio_snd.c
src/efi/pymergetic/metal/blk/: virtio_blk.c
src/efi/pymergetic/metal/boot/: run_port.c
src/efi/pymergetic/metal/boot/efi/: boot_init.c
src/efi/pymergetic/metal/console/: virtio_console.c
src/efi/pymergetic/metal/coro/: coro.c
src/efi/pymergetic/metal/dev/gfx/: gfx_port.c
src/efi/pymergetic/metal/dev/input/: input_port.c
src/efi/pymergetic/metal/dev/random/: random_port.c
src/efi/pymergetic/metal/efi/: boot_init.c  efi_run.c
src/efi/pymergetic/metal/esp/: esp.c
src/efi/pymergetic/metal/fs/: fs.c
src/efi/pymergetic/metal/fs/esp/: esp_port.c
src/efi/pymergetic/metal/gfx/: font_vga8x16.inc.c  gfx.c
src/efi/pymergetic/metal/input/: input.c
src/efi/pymergetic/metal/io/: io.c
src/efi/pymergetic/metal/lifecycle/: lifecycle.c
src/efi/pymergetic/metal/log/: log.c
src/efi/pymergetic/metal/mem/: libc.c  libc_wamr.c  mem.c  tlsf_edk2.c  tlsf_shim.h
src/efi/pymergetic/metal/mem/host_stubs/: assert.h  errno.h  limits.h  math.h  poll.h  pthread.h  stdbool.h  stdio.h  stdlib.h  string.h  time.h
src/efi/pymergetic/metal/net/: lwip_sys.c  lwipopts.h  net.c  net_lwip.c  net_null.c  virtio_net.c  virtio_netif.h
src/efi/pymergetic/metal/net/arch/: cc.h
src/efi/pymergetic/metal/random/: random.c
src/efi/pymergetic/metal/run/: run.c
src/efi/pymergetic/metal/runtime/time/: time_port.c
src/efi/pymergetic/metal/shell/: shell.c
src/efi/pymergetic/metal/stack/: stack.c
src/efi/pymergetic/metal/stream/: stream.c
src/efi/pymergetic/metal/task/: task.c
src/efi/pymergetic/metal/time/: time.c
src/efi/pymergetic/metal/ui/: ui.c
src/efi/pymergetic/metal/virtio/: virtio_pci.c
src/efi/pymergetic/metal/wamr/: compile_flags.txt  efi_platform.c  efi_socket.c  efi_thread.c  efi_wasi_fs.c  platform_internal.h  shared_platform.cmake
src/efi/pymergetic/metal/wasm/: embed_mods.inc.c  wasm.c
src/linux/: CMakeLists.txt  main.c  process_test.c  thread_stress_test.c
src/linux/cmake/: PmNetDeps.cmake
src/linux/pymergetic/metal/console/: viewport.c
src/linux/pymergetic/metal/memory/: bytecode.c  kheap.c  ram.c
src/linux/pymergetic/metal/mount/: device.c  tmpfs.c
src/linux/pymergetic/metal/port/: dir.c  dns.c  intr.c  lock.c  pipe.c  platform.c  sockaddr_conv.h  tcp.c  term.c  tls.c  udp.c  worker.c
src/linux/pymergetic/metal/wasi/: file.c
src/linux/tests/: process_test.c
src/nuttx/: BASE_TOUCH.md  CMakeLists.txt  Kconfig  Make.defs  Makefile  README.md  main.c  wamr
src/nuttx/configs/: qemu-metal.config  sim-metal.config
src/nuttx/pymergetic/metal/memory/: bytecode.c  kheap.c  ram.c
src/nuttx/pymergetic/metal/mount/: device.c  tmpfs.c
src/nuttx/pymergetic/metal/port/: dns.c  host_mem_adapt.c  host_net_adapt.c  lock.c  pipe.c  platform.c  qemu_romfs_stub.c  sockaddr_conv.h  tcp.c  tls.c  udp.c  worker.c
src/nuttx/pymergetic/metal/wasi/: file.c  posix_file_real.c
src/zephyr/: CMakeLists.txt  Kconfig  main.c  mbedtls_user_config.h  prj.conf
src/zephyr/boards/: .gitkeep  native_sim_native_64.conf  pm_qemu_dram.overlay  pm_ramdisk.overlay  qemu_x86_64.conf
src/zephyr/pymergetic/metal/console/: console.c  viewport.c
src/zephyr/pymergetic/metal/memory/: budget.c  budget.h  bytecode.c  kheap.c  ram.c
src/zephyr/pymergetic/metal/mount/: device.c  tmpfs.c
src/zephyr/pymergetic/metal/port/: dir.c  dns.c  host_net_adapt.c  lock.c  mbedtls_entropy.c  pipe.c  pipe_zephyr.h  platform.c  sleep.c  tcp.c  tls.c  udp.c  worker.c
src/zephyr/pymergetic/metal/wasi/: file.c  file.h  platform.h  shim.h  socket.c  socket.h  support.c
(+738 files in other folders)
